src/styles/global.css
/* RESET */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;
}

html, body {
    scroll-behavior: smooth;
}

body::-webkit-scrollbar {
    width: 8px;
    background: transparent;
}
body::-webkit-scrollbar-thumb {
    background: #b81414;
    border-radius: 6px;
}

body {
    display: flex;
    flex-flow: column nowrap;
    width: 100%;
    background: linear-gradient(to top, rgba(30,35,38,.8), rgba(30,35,38,1)), url(../images/bg_home.jpg);
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    background-color: #1f1f1f;
}

h2 {
    font-size: 48px;
    text-align: center;
    padding: 20px 0;
    text-transform: capitalize;
}

.section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    color: #fff;
    padding: 45px 20px;
}

.profile-card .rrss a,
.portfolio .portfolio-container .gallery .project .description .links a {
    color: #fff;
    display: inline-block;
    text-decoration: none;
    border: 1px solid #fff;
    border-radius: 100%;
    width: 40px;
    height: 40px;
    line-height: 40px;
    margin: 20px 5px 0 5px;
    font-size: 20px;
    transition: .3s;
}
.profile-card .rrss a:hover,
.portfolio .portfolio-container .gallery .project .description .links a:hover {
    background-color: #b81414;
}

/* Medium devices (tablets, 768px and down) */
@media screen and (max-width:768px){
    html, body {
        overflow-y: scroll;
    }
}

